loading screen overflow bugfix

--- a/personal-website/src/context/loading_screen.module.css
+++ b/personal-website/src/context/loading_screen.module.css
@@ -1,16 +1,18 @@
-.loadingScreenContainer{
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100vw;
-    height: 100vh;
-    pointer-events: none;
-    z-index: 100;
+.loadingScreenContainer {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  pointer-events: none;
+  z-index: 100;
 }
 
-.curtain{
-    position: absolute;
-    top: 0;
-    transition: width 2s, left 2s;
-    height: 100vh;
+.curtain {
+  position: absolute;
+  top: 0;
+  transition:
+    width 2s,
+    left 2s;
+  height: 100vh;
 }
